--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,18 +8,23 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: archlinux:base-devel
+    env:
+      repo_name: custom-bgh
     steps:
       - uses: actions/checkout@v3
       - name: Sync and update container
         run: pacman --sync --sysupgrade --refresh --noconfirm
       - name: Prepare environment for build user
         run: |
-          sed --in-place --expression='s@#BUILDDIR=.*@BUILDDIR=/tmp/makepkg@' /etc/makepkg.conf
-          sed --in-place --expression='s@#PKGDEST=.*@PKGDEST=/tmp/packages@' /etc/makepkg.conf
-          sed --in-place --expression='s@#SRCDEST=.*@SRCDEST=/tmp/sources@' /etc/makepkg.conf
-          sed --in-place --expression='s@#PACKAGER=.*@PACKAGER="bgh <arch at bgh dot io>"@' /etc/makepkg.conf
-          useradd --create-home build_user
-          echo "build_user ALL=(ALL) NOPASSWD: /usr/bin/pacman" > /etc/sudoers.d/build_user
+          username=build_user
+          sed --in-place \
+            --expression='s@#BUILDDIR=.*@BUILDDIR=/tmp/makepkg@' \
+            --expression='s@#PKGDEST=.*@PKGDEST=/tmp/packages@' \
+            --expression='s@#SRCDEST=.*@SRCDEST=/tmp/sources@' \
+            --expression='s@#PACKAGER=.*@PACKAGER="bgh <arch at bgh dot io>"@' \
+            /etc/makepkg.conf
+          useradd --create-home "${username}"
+          echo "${username} ALL=(ALL) NOPASSWD: /usr/bin/pacman" > "/etc/sudoers.d/${username}"
       - name: Build package
         run: |
           cd pkgbuild/cloud-init
@@ -29,11 +34,13 @@ jobs:
           gpg --detach-sign --pinentry-mode loopback --batch --passphrase "${{ secrets.GPG_PASSPHRASE }}" --sign /tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst
       - name: Upload to repo
         run: |
-          curl --request PUT --url "https://la.storage.bunnycdn.com/bgh-cdn/arch/custom-bgh/os/x86_64/cloud-init-23.1.1-1-any.pkg.tar.zst" --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" --header "Content-Type: application/octet-stream" --data-binary "@/tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst"
-          curl --request PUT --url "https://la.storage.bunnycdn.com/bgh-cdn/arch/custom-bgh/os/x86_64/cloud-init-23.1.1-1-any.pkg.tar.zst.sig" --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" --header "Content-Type: application/octet-stream" --data-binary "@/tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst.sig"
+          curl --request PUT --url "https://la.storage.bunnycdn.com/bgh-cdn/arch/${repo_name}/os/x86_64/cloud-init-23.1.1-1-any.pkg.tar.zst" --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" --header "Content-Type: application/octet-stream" --data-binary "@/tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst"
+          curl --request PUT --url "https://la.storage.bunnycdn.com/bgh-cdn/arch/${repo_name}/os/x86_64/cloud-init-23.1.1-1-any.pkg.tar.zst.sig" --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" --header "Content-Type: application/octet-stream" --data-binary "@/tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst.sig"
       - name: Update db
         run: |
-          curl -remote-name --location https://cdn.bgh.io/arch/custom-bgh/os/x86_64/custom-bgh.db.tar.gz
-          repo-add --sign custom-bgh.db.tar.gz /tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst
-          curl --request PUT --url "https://la.storage.bunnycdn.com/bgh-cdn/arch/custom-bgh/os/x86_64/custom-bgh.db" --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" --header "Content-Type: application/octet-stream" --data-binary "@custom-bgh.db.tar.gz"
-          curl --request PUT --url "https://la.storage.bunnycdn.com/bgh-cdn/arch/custom-bgh/os/x86_64/custom-bgh.db.sig" --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" --header "Content-Type: application/octet-stream" --data-binary "@custom-bgh.db.tar.gz.sig"
+          curl --remote-name --location "https://cdn.bgh.io/arch/${repo_name}/os/x86_64/${repo_name}.db"
+          curl --remote-name --location "https://cdn.bgh.io/arch/${repo_name}/os/x86_64/${repo_name}.db.sig"
+          gpg --verify "${repo_name}.db.sig" || exit
+          repo-add --sign "${repo_name}.db.tar.gz" /tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst
+          curl --request PUT --url "https://la.storage.bunnycdn.com/bgh-cdn/arch/${repo_name}/os/x86_64/${repo_name}.db" --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" --header "Content-Type: application/octet-stream" --data-binary "@${repo_name}.db.tar.gz"
+          curl --request PUT --url "https://la.storage.bunnycdn.com/bgh-cdn/arch/${repo_name}/os/x86_64/${repo_name}.db.sig" --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" --header "Content-Type: application/octet-stream" --data-binary "@${repo_name}.db.tar.gz.sig"
