update 1 file and create 2 files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Make package
+name: Make packages
 
 on:
   workflow_dispatch:
@@ -19,7 +19,8 @@ jobs:
       - name: Prepare environment for build user
         run: |
           username=build_user
-          sed --in-place \
+          sed \
+            --in-place \
             --expression='s@#BUILDDIR=.*@BUILDDIR=/tmp/makepkg@' \
             --expression='s@#PKGDEST=.*@PKGDEST=/tmp/packages@' \
             --expression='s@#SRCDEST=.*@SRCDEST=/tmp/sources@' \
@@ -27,46 +28,61 @@ jobs:
             /etc/makepkg.conf
           useradd --create-home "${username}"
           echo "${username} ALL=(ALL) NOPASSWD: /usr/bin/pacman" > "/etc/sudoers.d/${username}"
+      - name: Import signing key
+        run: |
+          echo "${{ secrets.GPG_PRIVKEY_B64 }}" | base64 --decode | gpg --batch --import
       - name: Build package
         run: |
-          cd pkgbuild/cloud-init
-          su build_user
-          echo "${{ secrets.GPG_PRIVKEY_B64 }}" | base64 --decode | gpg --batch --import
-          su build_user --command "makepkg --syncdeps --noconfirm"
-          gpg --detach-sign \
-            --pinentry-mode loopback \
-            --batch --passphrase "${{ secrets.GPG_PASSPHRASE }}" \
-            --sign /tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst
-      - name: Upload package to repository
+          for pkgdir in pkgbuild/*/
+          do
+            cd "${pkgdir}" || exit
+            su build_user --command "makepkg --syncdeps --noconfirm"
+            gpg \
+              --detach-sign \
+              --pinentry-mode loopback \
+              --batch \
+              --passphrase "${{ secrets.GPG_PASSPHRASE }}" \
+              "/tmp/packages/$(ls ./*.pkg.tar.zst)"
+            done
+      - name: Download and verify current repository package database
         run: |
-          curl --request PUT \
-            --url "${{ env.repo_api_url  }}/${{ env.repo_name }}/os/x86_64/cloud-init-23.1.1-1-any.pkg.tar.zst" \
-            --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" \
-            --header "Content-Type: application/octet-stream" \
-            --data-binary "@/tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst"
-          curl --request PUT \
-            --url "${{ env.repo_api_url  }}/${{ env.repo_name }}/os/x86_64/cloud-init-23.1.1-1-any.pkg.tar.zst.sig" \
-            --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" \
-            --header "Content-Type: application/octet-stream" \
-            --data-binary "@/tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst.sig"
-      - name: Update repository package database
-        run: |
-          curl --fail \
+          curl \
+            --fail \
             --remote-name \
             "${{ env.repo_base_url }}/${{ env.repo_name }}/os/x86_64/${{ env.repo_name }}.db" \
             || true
-          curl --fail \
-            --remote-name \
-            "${{ env.repo_base_url }}/${{ env.repo_name }}/os/x86_64/${{ env.repo_name }}.db.sig" \
-            || true
-          if [ -f "${{ env.repo_name }}.db" ]; then gpg --verify "${{ env.repo_name }}.db.sig"; fi
-          repo-add --sign "${{ env.repo_name }}.db.tar.gz" /tmp/packages/cloud-init-23.1.1-1-any.pkg.tar.zst
-          curl --request PUT \
+            curl \
+              --fail \
+              --remote-name \
+              "${{ env.repo_base_url }}/${{ env.repo_name }}/os/x86_64/${{ env.repo_name }}.db.sig" \
+              || true
+            if [ -f "${{ env.repo_name }}.db" ]; then gpg --verify "${{ env.repo_name }}.db.sig"; fi
+      - name: Upload package to repository and update database
+        run: |
+          for pkgfile in /tmp/packages/*.pkg.tar.zst
+          do
+            curl \
+              --request PUT \
+              --url "${{ env.repo_api_url  }}/${{ env.repo_name }}/os/x86_64/$(basename "${pkgfile}")" \
+              --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" \
+              --header "Content-Type: application/octet-stream" \
+              --data-binary "@${pkgfile}"
+            curl \
+              --request PUT \
+              --url "${{ env.repo_api_url  }}/${{ env.repo_name }}/os/x86_64/$(basename "${pkgfile}").sig" \
+              --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" \
+              --header "Content-Type: application/octet-stream" \
+              --data-binary "@${pkgfile}.sig"
+            repo-add --sign "${{ env.repo_name }}.db.tar.gz" "${pkgfile}.sig"
+          done
+          curl \
+            --request PUT \
             --url "${{ env.repo_api_url  }}/${{ env.repo_name }}/os/x86_64/${{ env.repo_name }}.db" \
             --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" \
             --header "Content-Type: application/octet-stream" \
             --data-binary "@${{ env.repo_name }}.db.tar.gz"
-          curl --request PUT \
+          curl \
+            --request PUT \
             --url "${{ env.repo_api_url  }}/${{ env.repo_name }}/os/x86_64/${{ env.repo_name }}.db.sig" \
             --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" \
             --header "Content-Type: application/octet-stream" \
