--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
               --header "AccessKey: ${{ secrets.BUNNY_ACCESSKEY }}" \
               --header "Content-Type: application/octet-stream" \
               --data-binary "@${pkgfile}.sig"
-            repo-add --sign "${{ env.repo_name }}.db.tar.gz" "${pkgfile}"
+            repo-add "${{ env.repo_name }}.db.tar.gz" "${pkgfile}"
           done
           gpg \
             --detach-sign \
