--- a/pkgbuild/uptime-kuma/PKGBUILD
+++ b/pkgbuild/uptime-kuma/PKGBUILD
@@ -17,7 +17,9 @@ source=(
   "uptime-kuma.service"
 )
 
-sha256sums=('e32e8d732c19145835c2e57c30ec86a6537df412e5379b8d4ca3f144c3cf5487' '670cbf5585804b2d5c26484e9437d79842645756906a32fe85fbad9123b129e7' '84ec5db5532ee2e218bc995ef1c04b7a4b9ebe4df198bba99fd031d6b9073796')
+sha256sums=('9febdad8bb24caee012a0c79cada6aace88ad3859cf94218512df987ecda009f'
+            '41f0fe9f1d9ec432c98e8bce2f25b59dd61c11f774bd2ad53d5cec1d795fd782'
+            '84ec5db5532ee2e218bc995ef1c04b7a4b9ebe4df198bba99fd031d6b9073796')
 
 package() {
   npm install -g --user root --prefix "$pkgdir"/usr "$srcdir"/$pkgname-$pkgver.tar.gz
